sessions/ses10/app1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-1
spec:
  replicas: 4
  selector:
    matchLabels:
      app: app-1
  template:
    metadata:
      labels:
        app: app-1
    spec:
      containers:
      - name: app-1-container
        image: paulbouwer/hello-kubernetes:1.10
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: simple-service
spec:
  selector:
    app: simple
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
